--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     document.addEventListener("pointerup", p_func)
     document.addEventListener("keyup", p_func)
     document.addEventListener("pointerdown", op_func)
-    document.addEventListener("keydown", op_func)
+    // document.addEventListener("keydown", op_func)
 </script>
 </body>
 </html>
