--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <head>
     <title>POPCAT CLASSIC</title>
     <meta name="author" content="Joshua O'Sullivan, Freddy Heppell, Edward Hails">
+
     <meta charset="UTF-8">
+
+    <meta name="msapplication-TileColor" content="#b721ff">
+    <meta name="theme-color" content="#b721ff">
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap&text=0123456789" rel="stylesheet">
+
+
     <style>
         html { height:100%; overflow:hidden; }
         body {
@@ -43,7 +53,7 @@
             flex-grow:1;
             width:100%;
             max-width: 800px;
-            background-position:  bottom;
+            background-position: bottom;
             background-size: contain;
             background-repeat: no-repeat;
             touch-action: manipulation;
